--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,9 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings" />
+
     <item android:id="@+id/action_search"
         android:title="Search"
         android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
         app:showAsAction="ifRoom|collapseActionView"
         app:actionViewClass="android.support.v7.widget.SearchView" />
+    <item android:id="@+id/action_show_favorite" android:title="@string/action_show_favorite"
+        android:icon="@drawable/icon_favorite_not_show"
+        app:showAsAction="ifRoom|collapseActionView"/>
 </menu>
