add flash card activity

--- a/app/src/main/res/layout/content_fragment.xml
+++ b/app/src/main/res/layout/content_fragment.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#122196f3">
+    android:background="@color/app_bg">
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -16,7 +16,7 @@
         android:padding="10dp"
         />
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/floatButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
@@ -26,6 +26,7 @@
         app:layout_anchorGravity="bottom|right|end"
         app:backgroundTint="@color/PrimaryColor"
         app:rippleColor="#FFF"
-        app:fabSize="normal"/>
+        app:fabSize="normal"
+        app:layout_behavior="com.supermario.kanjilookandlearn.view.FBScrollBehavior"/>
     </android.support.design.widget.CoordinatorLayout>
 </RelativeLayout>
