--- a/app/src/main/res/layout/item_kanji.xml
+++ b/app/src/main/res/layout/item_kanji.xml
@@ -8,7 +8,7 @@
 
     <!-- A CardView that contains a TextView -->
     <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
+        android:id="@+id/face_card_view"
         app:cardCornerRadius="4dp"
         app:cardPreventCornerOverlap="false"
         app:cardUseCompatPadding="true"
